read from sourceforge server file